--- a/web/package.json
+++ b/web/package.json
@@ -10,15 +10,17 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@portabletext/svelte": "^0.2.0",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "prettier": "^2.4.1",
-    "prettier-plugin-svelte": "^2.4.0",
+    "prettier-plugin-svelte": "^2.5.1",
     "sass": "^1.46.0",
     "svelte": "^3.44.0",
+    "svelte-highlight": "^5.2.0",
     "svelte-preprocess": "^4.10.1"
   },
   "type": "module",
