--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,8 @@
     "sass": "^1.46.0",
     "svelte": "^3.44.0",
     "svelte-highlight": "^5.2.0",
-    "svelte-preprocess": "^4.10.1"
+    "svelte-preprocess": "^4.10.1",
+    "svelte-share-buttons-component": "^1.5.0"
   },
   "type": "module",
   "dependencies": {
