--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,8 @@
   "type": "module",
   "dependencies": {
     "@sanity/client": "^2.23.2",
-    "@sanity/image-url": "^1.0.1"
+    "@sanity/image-url": "^1.0.1",
+    "date-fns": "^2.28.0",
+    "feather-icons": "^4.28.0"
   }
 }
